week 2 Friday Challange

--- a/index.html
+++ b/index.html
@@ -5,28 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Savarakiskas</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body style="background-color: #fff; font-family: 'Calibri';">
-    <main style="background-color: #fff; width: 1200px; margin-left: 13%; margin-top: 150px; display: flex; gap: 64px;">
-        <div style="background-color: #fff; width: 230px;">
-            <img src="./cc-apple-pay-brands.webp" alt="apple" style="background-color: #51C3CD; width: 230px; height: 230px; object-position: center;">
-            <h1 style="text-align: center; color: #F24C32;">DISCOVER</h1>
-            <p style="font-size: 22px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+    <main class="container">
+        <div class="Icolumn">
+            <img class="Ilogo" src="./cc-apple-pay-brands.webp" alt="apple">
+            <h1 class="Itit">DISCOVER</h1>
+            <p class="Ipar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
-        <div style="background-color: #fff; width: 230px;">
-            <img src="./university-solid.webp" alt="university" style="background-color:#3A6EC1; width: 230px; height: 230px;">
-            <h1 style="text-align: center; color: #F24C32;">DESIGN</h1>
-            <p style="font-size: 22px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+        <div class="IIcolumn">
+            <img class="IIlogo" src="./university-solid.webp" alt="university">
+            <h1 class="IItit" >DESIGN</h1>
+            <p class="IIpar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
-        <div style="background-color: #fff; width: 230px;">
-            <img src="./users-solid.webp" alt="users" style="background-color: #F34D33; width: 230px; height: 230px;">
-            <h1 style="text-align: center; color: #F24C32;">DEVELOP</h1>
-            <p style="font-size: 22px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+        <div class="IIIcolumn">
+            <img class="IIIlogo" src="./users-solid.webp" alt="users">
+            <h1 class="IIItit">DEVELOP</h1>
+            <p class="IIIpar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
-        <div style="background-color: #fff; width: 230px;">
-            <img src="./random-solid.webp" alt="random" style="background-color: #919191; width: 230px; height: 230px;">
-            <h1 style="text-align: center; color: #F24C32;">DEPLOY</h1>
-            <p style="font-size: 22px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+        <div class="IVcolumn">
+            <img class="IVlogo" src="./random-solid.webp" alt="random">
+            <h1 class="IVtit">DEPLOY</h1>
+            <p class="IVpar"">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
     </main>
 </body>
