--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body style="background-color: #fff; font-family: 'Calibri';">
     <main class="container">
         <div class="Icolumn">
-            <img class="Ilogo" src="./cc-apple-pay-brands.webp" alt="apple">
+            <img class="Ilogo" src="./cc-apple-pay-brands-white.webp" alt="apple">
             <h1 class="Itit">DISCOVER</h1>
             <p class="Ipar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
         <div class="IIcolumn">
-            <img class="IIlogo" src="./university-solid.webp" alt="university">
+            <img class="IIlogo" src="./university-solid-white.webp" alt="university">
             <h1 class="IItit" >DESIGN</h1>
             <p class="IIpar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
         <div class="IIIcolumn">
-            <img class="IIIlogo" src="./users-solid.webp" alt="users">
+            <img class="IIIlogo" src="./users-solid-white.webp" alt="users">
             <h1 class="IIItit">DEVELOP</h1>
             <p class="IIIpar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
         <div class="IVcolumn">
-            <img class="IVlogo" src="./random-solid.webp" alt="random">
+            <img class="IVlogo" src="./random-solid-white.webp" alt="random">
             <h1 class="IVtit">DEPLOY</h1>
             <p class="IVpar"">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
